# ursip_test

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
data_analysis/: admin.py  constants.py  models.py  services.py
data_analysis/management/commands/: load_from_excel.py
data_analysis/migrations/: 0001_initial.py  0002_alter_analysis_options_and_more.py
ursip/: asgi.py  settings.py  urls.py  wsgi.py
