[tool.poetry]
name = "ursip"
version = "0.1.0"
description = ""
authors = ["Maxim Marchenko <maximoous4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
